Other logins refactory

--- a/index.html
+++ b/index.html
@@ -35,14 +35,6 @@
                 Create Account
             </div>
 
-            <div class="social-media">
-                <i class="fab fa-google-plus-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-linkedin"></i>
-            </div>
-
-            <div class="or">OR</div>
-
             <form action="" method="POST">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name">
@@ -58,6 +50,15 @@
 
                 <input type="submit" value="Submit">
             </form>
+
+            <div class="or">
+                OR
+            </div>
+
+            <div class="google-login">
+                <img src="public/images/g-logo.png" alt="Google">
+                Sign up with Google
+            </div>
         </div>
     </div>
 
